--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "chokidar": "^2.1.8",
     "concurrently": "^6.2.0",
     "history": "^4.10.1",
     "react": "^17.0.2",
